app/src/assets/pages/home.less
/* ... */
.model-market {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding: 0 1.5rem;
  height: 100%;
  overflow: auto;
  scrollbar-width: thin;

  .market-wrapper {
    width: 100%;
    height: 100%;
    margin: 0 auto;

    max-width: 1400px;
  }

  @media (max-width: 768px) {
    padding: 0 1rem;
  }

  .title {
    font-size: 24px;
  }

  & > * {
    flex-shrink: 0;
  }

  .search-bar-wrapper {
    margin: 1rem auto;
    width: calc(100% - 1rem);

    .search-bar {
      position: relative;
      margin-bottom: 0.5rem;
    }

    .search-icon {
      position: absolute;
      top: 50%;
      left: 1rem;
      transform: translateY(-50%);
      width: 1rem;
      height: 1rem;
    }

    .clear-icon {
      position: absolute;
      top: 50%;
      right: 1rem;
      transform: translateY(-50%);
      width: 1rem;
      height: 1rem;
      opacity: 0;
      transition: 0.25s;
      cursor: pointer;

      &.active {
        opacity: .8;

        &:hover {
          opacity: 1;
        }
      }
    }

    .input-box {
      padding: 0 2.5rem;
    }
  }

  .model-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: center;
    width: 100%;

    @media (max-width: 1024px) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (max-width: 768px) {
      grid-template-columns: 1fr;
    }
  }

  .model-item {
    position: relative;
    display: flex;
    flex-direction: column;
    user-select: none;
    padding: 0.5rem 0.5rem;
    margin: 0.5rem;
    border: 1px solid hsl(var(--border) / 0.4);
    transition: 0.25s;
    transition-property: border-color, background;
    cursor: pointer;
    animation: fadein 0.25s forwards ease-in-out;
    opacity: 0;
    width: calc(100% - 1rem);
    min-width: 0;

    svg {
      flex-shrink: 0;
    }

    @keyframes fadein {
      from { opacity: 0; transform: translateY(2.5rem); }
      to   { opacity: 1; transform: translateY(0); }
    }

    .model-name {
      color: hsl(var(--text));
      font-weight: medium;
    }

    .model-id {
      color: hsl(var(--text-secondary));
      font-size: 14px;
      margin-top: 0.25rem;
      background: hsl(var(--muted));
    }

    .model-description {
      color: hsl(var(--text-secondary));
      margin-bottom: 0.25rem;
    }

    &:hover {
      background: hsla(var(--background-hover));
      border-color: hsl(var(--border) / 0.7);

      .grip-icon {
        opacity: 1;
      }
    }

    &.active {
      border-color: hsl(var(--border));

      .grip-icon {
        opacity: 1;
      }
    }

    .grip-icon {
      opacity: 0.6;
      transition: 0.25s;
    }

    .model-avatar {
      border-radius: 50%;
      width: 3rem;
      height: 3rem;

      @media (max-width: 768px) {
        width: 2.5rem;
        height: 2.5rem;
      }
    }

    .model-action {
      button {
        background: none !important;
      }

      @keyframes rotate {
        0% {
          transform: rotate(0deg);
        }
        25% {
          transform: rotate(25deg);
        }
        50% {
          transform: rotate(0deg);
        }
        75% {
          transform: rotate(-25deg);
        }
        100% {
          transform: rotate(0deg);
        }
      }

      svg {
        animation: rotate 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
      }
    }

    .market-tip {
      transform: translateY(1px);
    }

    .model-name {
      display: flex;
      flex-direction: row;
      align-items: center;

      .badge {
        transform: translateY(-2px);
      }

      &.pro {
        p {
          // gold color gradient
          background: linear-gradient(to right, hsl(45, 100%, 70%) 0%, hsl(46, 100%, 58%) 50%, hsl(46, 100%, 50%) 100%);
          -webkit-background-clip: text;
          -webkit-text-fill-color: transparent;
        }

        .badge {
          color: rgb(164, 128, 0) !important;
          background: rgb(255, 231, 145) !important;
        }
      }
    }

    .model-tag {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      margin-top: 0.25rem;
      transform: translateY(0.25rem);
    }
  }

  .market-header {
    position: relative;
    width: 100%;
    height: max-content;
    margin-top: 1.5rem;


    .header-bar {
      width: 0.75rem;
      margin: 0 1rem;
      aspect-ratio: .75;
      background:
              var(--anim-bar) 0%   50%,
              var(--anim-bar) 50%  50%,
              var(--anim-bar) 100% 50%;
      animation: l7 1s infinite linear alternate;

      @keyframes l7 {
        0%  {background-size: 20% 50% ,20% 50% ,20% 50% }
        20% {background-size: 20% 20% ,20% 50% ,20% 50% }
        40% {background-size: 20% 100%,20% 20% ,20% 50% }
        60% {background-size: 20% 50% ,20% 100%,20% 20% }
        80% {background-size: 20% 50% ,20% 50% ,20% 100%}
        100%{background-size: 20% 50% ,20% 50% ,20% 50% }
      }

      &.reverse {
        background:
                var(--anim-bar) 100% 50%,
                var(--anim-bar) 50%  50%,
                var(--anim-bar) 0%   50%;
      }
    }

    .close-action {
      position: absolute;
    }
  }

  .market-footer {
    margin-top: 3rem;
    margin-bottom: 2.5rem;
    user-select: none;
    padding: 0 1rem;

    a {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      font-size: 14px;
      color: hsl(var(--text-secondary));
      transition: 0.25s;
      width: max-content;
      max-width: 100%;
      margin: 0 auto;
      text-align: center;

      svg {
        flex-shrink: 0;
      }

      &:hover {
        color: hsl(var(--text));
      }
    }
  }
}

.conversation-name {
  color: hsl(var(--text));
  font-weight: bold !important;
  word-wrap: anywhere;
}

.chat-action {
  @keyframes up {
    0% {
      opacity: 0;
      transform: translateY(100%);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }

  animation: up 0.2s ease-in-out;
}
/* ... */

